# keypoint_detection

./: CMakeLists.txt  readme.txt
include/: config.h  controller.h  descriptor_generator.h  descriptor_matcher.h  detector.h  mouse_selector.h  utils.h
src/: controller.cpp  descriptor_generator.cpp  descriptor_matcher.cpp  detector.cpp  main.cpp  mouse_selector.cpp  utils.cpp
